--- a/Exercise_Starter_Files/Vagrantfile
+++ b/Exercise_Starter_Files/Vagrantfile
@@ -13,8 +13,8 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   # Use any version shown here https://app.vagrantup.com/opensuse/boxes/Leap-15.4.x86_64
-  config.vm.box = "opensuse/Leap-15.4.x86_64"
-  config.vm.box_version = "15.4.13.7"
+  config.vm.box = "bento/opensuse-leap-15.6-arm64"
+  config.vm.box_version = "202404.23.0"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -45,7 +45,7 @@ Vagrant.configure("2") do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  config.vm.network "private_network", ip: "192.168.33.10"
+  config.vm.network "private_network", ip: "192.168.80.78"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
@@ -62,7 +62,7 @@ Vagrant.configure("2") do |config|
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
   #
-  config.vm.provider "virtualbox" do |vb|
+  config.vm.provider "vmware_desktop" do |vb|
   #   # Display the VirtualBox GUI when booting the machine
   #   vb.gui = true
   #
@@ -70,7 +70,6 @@ Vagrant.configure("2") do |config|
 
     vb.memory = "4096"
     #vb.memory = "2048"
-    vb.name = "k3s"
   end
   #
   # View the documentation for the provider you are using for more
