feat: Add python endpoint trace

--- a/Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/backend.yaml
+++ b/Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/backend.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-app
+  annotations:
+    "sidecar.jaegertracing.io/inject": "true"
 spec:
   replicas: 3
   selector:
@@ -14,8 +16,8 @@ spec:
     spec:
       containers:
       - name: backend
-        # We advise you to build, push and use your own image, instead of using instructor's image.      
-        image: ghcr.io/jasonsmithio/backend:v1
+        # We advise you to build, push and use your own image, instead of using instructor's image.
+        image: helomali/python-otel-backend:latest
         ports:
         - containerPort: 8081
 ---
