--- a/Project_Starter_Files-Building_a_Metrics_Dashboard/Vagrantfile
+++ b/Project_Starter_Files-Building_a_Metrics_Dashboard/Vagrantfile
@@ -19,7 +19,7 @@ Vagrant.configure("2") do |config|
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
-  # `vagrant box outdated`. This is not recommended.
+  # `vagrant box outdated`. This is not recommended
   # config.vm.box_check_update = false
 
   # Create a forwarded port mapping which allows access to a specific port
@@ -29,6 +29,7 @@ Vagrant.configure("2") do |config|
   config.vm.network "forwarded_port", guest: 80, host: 8080
   config.vm.network "forwarded_port", guest: 9090, host: 9090
   config.vm.network "forwarded_port", guest: 8080, host: 8080
+  config.vm.network "forwarded_port", guest: 8081, host: 8081
   #config.vm.network "forwarded_port", guest: 8888, host: 8080
   config.vm.network "forwarded_port", guest: 9090, host: 8888
   config.vm.network "forwarded_port", guest: 3000, host: 3000
@@ -38,6 +39,7 @@ Vagrant.configure("2") do |config|
   #config.vm.network "forwarded_port", guest: 8000, host: 8888
   config.vm.network "forwarded_port", guest: 8888, host: 8888
   config.vm.network "forwarded_port", guest: 8000, host: 8000
+  config.vm.network "forwarded_port", guest: 31443, host: 31443
 
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine and only allow access
@@ -57,7 +59,7 @@ Vagrant.configure("2") do |config|
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
-  # config.vm.synced_folder "../data", "/vagrant_data"
+  config.vm.synced_folder ".", "/project"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -73,6 +75,8 @@ Vagrant.configure("2") do |config|
     #vb.memory = "2048"
     vb.name = "jupiter"
   end
+  config.ssh.username = "vagrant"
+  config.ssh.password = "vagrant"
   #
   # View the documentation for the provider you are using for more
   # information on available options.
