--- a/course-files/tracing-extra/k8s/deployment.sample.yaml
+++ b/course-files/tracing-extra/k8s/deployment.sample.yaml
@@ -3,6 +3,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: my-test-trace
+  annotations:
+    "sidecar.jaeger.io/inject": "true"
 spec:
   replicas: 1
   selector:
@@ -16,7 +18,7 @@ spec:
       containers:
       - name: hello-app
         # Replace $GCLOUD_PROJECT with your project ID
-        image: <your container>
+        image: "helo.mali.instrumeted-python-app:latest"
         # This app listens on port 8080 for web traffic by default.
         ports:
         - containerPort: 8080
