--- a/Project_Starter_Files-Building_a_Metrics_Dashboard/Vagrantfile
+++ b/Project_Starter_Files-Building_a_Metrics_Dashboard/Vagrantfile
@@ -30,6 +30,7 @@ Vagrant.configure("2") do |config|
   config.vm.network "forwarded_port", guest: 9090, host: 9090
   config.vm.network "forwarded_port", guest: 8080, host: 8080
   config.vm.network "forwarded_port", guest: 8081, host: 8081
+  config.vm.network "forwarded_port", guest: 8082, host: 8082
   #config.vm.network "forwarded_port", guest: 8888, host: 8080
   config.vm.network "forwarded_port", guest: 9090, host: 8888
   config.vm.network "forwarded_port", guest: 3000, host: 3000
