--- a/Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/backend.yaml
+++ b/Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/backend.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
       - name: backend
         # We advise you to build, push and use your own image, instead of using instructor's image.
-        image: helomali/python-otel-backend:latest
+        image: helomali/observability-backend-app:1.0.1
         ports:
         - containerPort: 8081
 ---
