--- a/Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/frontend.yaml
+++ b/Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/frontend.yaml
@@ -15,7 +15,8 @@ spec:
       containers:
       - name: frontend
         # We advise you to build, push and use your own image, instead of using instructor's image.
-        image: ghcr.io/jasonsmithio/myfrontend:v1
+        image: helomali/frontend-reference-app:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
 ---
